# pyIClab

./: COPYRIGHT  LICENSE  LICENSE-1  LISENCE  MANIFEST.in  README.md  pyproject.toml
examples/: 01 simple ion chromatography.ipynb  02 built-in models demo.ipynb  03 eluents demo.ipynb  04 detectors demo.ipynb  05 built-in suppressors demo.ipynb  06 Join two suppressors to make a soda fountain.ipynb
pyIClab/: __init__.py  _baseclasses.py  _compat.py  _testing_toolkit.py  beadedbag.py  errors.py  interface.ipynb  interface.py  ionchromatograph.py  ions.py  units.py
pyIClab/assemblies/: __init__.py  columns.py  eluents.py  generics.py  injections.py  signals.py
pyIClab/engines/: equilibriums.py  models.py
src/pyIClab/: __init__.py  _baseclasses.py  _compat.py  _testing_toolkit.py  beadedbag.py  errors.py  interface.py  ionchromatograph.py  ions.py  units.py  updates.py
src/pyIClab/assemblies/: columns.py  eluents.py  generics.py  injections.py  signals.py
src/pyIClab/db/ionlib/: IonLibrary.csv
src/pyIClab/engines/: __init__.py  equilibriums.py  models.py
src/pyIClab/utils/: __init__.py  beadedbag.py  methods.py  optimize.py
